--- a/blog.html
+++ b/blog.html
@@ -317,6 +317,68 @@ font-family: Verdana;
 </style>
 <div id="coisinhos">
 
+<center><img src="https://i.imgur.com/VWH6o24.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>june . 28 . 2019</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiii fluffies <img src="https://i.imgur.com/7IFnyqV.gif"/><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+the shy bunny store is finally open worldwide ♡ !!!
+( please check it out on shybunny.middlepot.com )
+i've worked so hard for it to happen.. and it's been worth it already, i'm proud of myself !
+i'm in very berry productive phase now, as expected.. i knew it <img src="https://i.imgur.com/z2UgQA2.gif"/>
+i sewed a lot of stuff, made lots of cute new items for the store and i want to make even more this next month.
+also, i made my first clothing ♡♡
+it's a lovely dress.. i also made a cute bow headdress i'll use with it !!
+so yes, if i use these + the frilly socks i made : it's a full outfit made 100% by myself
+you have no idea how much it means to me.. i'm really happy !
+look at these :</pre><br>
+<br><br>
+
+<center><img width="370px" height="auto" src="https://i.imgur.com/m0wfTHC.jpg"/></center><br><br>
+<center><img width="370px" height="auto" src="https://i.imgur.com/taO9vbZ.jpg"/></center><br>
+
+</font></font></font>
+<br>
+
+<font size = 1><font color="#B1A69E">
+<br><br><pre style="font-family:verdana; white-space: pre-wrap; word-wrap: break-word;">
+it's so pretty.. ///
+i'm going to make more outfits soon, and as soon as i make a little more money and buy more fabric i'll surely put some clothing on the store !!
+( i also want to make some cute bags )
+
+about my instagram acc.. in addiction to my "self care calendar" idea i showed you before, i made some other templates for daily track & planning !
+i want to start using these frequently now in my phone, every morning, since it's the time of the day i check my apps.
+i was trying to keep these things "physically" but it sadly turned out a little messy <img src="https://i.imgur.com/j3bQf3u.gif"/>
+i think i'm not very good with planners, even though i love stationery stuff .. i always want to make everything to look perfect so it becomes easily stressful and time consuming ///
+these virtual templates will be very useful for me, so now it's not just something i do for helping others but also myself.. !
+i will not post my personal lists in public since my acc is focused on self care posts only, but as always , i'll share some of these with close friends ♡
+
+sooo.. about the q&a, i actually don't have any interesting subject to write about this time ;  ;
+usually the requests i receive are self care related, but i will try to explain how i keep my writing organized :
+
+　♡　i write texts about specific topics on /blog
+　♡　i write tips about daily problems on /help
+　♡　i write self care reminders on my ig acc
+
+i've been receiving requests that would fit into the help page and ig acc , but not on the blog...
+i will surely write more q&a texts once i get an interesting topic request !
+and, it doesn't have to be self care related, i write about life in general, if it's something i want to express my opinion about.. !
+
+i hope i haven't disappointed you .. i've been posting a lot in other places so please check them out //
+
+xoxo <img src="https://i.imgur.com/v8YK4Yq.gif"/></pre><br>
+<br><br>
+</font></font></font>
+
+<br>
+
+<center><img src="https://i.imgur.com/VWH6o24.gif"/></center>
+
+<br><br><br>
+
 <center><img src="https://i.imgur.com/AUebzYL.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
@@ -470,124 +532,6 @@ xoxo <img src="https://i.imgur.com/k9ihrza.gif"/><br>
 
 <br><br><br>
 
-
-<center><img src="https://i.imgur.com/svKT8no.png"/></center>
-<br><br>
-<font size = 1><font color="#CBBBB1">
-<center>march . 29 . 2019</center>
-</font></font></font>
-<font size = 1><font color="#B1A69E">
-<br>
-hiiii fluffies <img src="https://i.imgur.com/Jx8mKKt.gif"/><br>
-what are you thinking of the new layout ♡ ?<br>
-this one is my favorite layout of all times.. i'm so proud ; ;<br>
-i organized everything waaay better, getting rid of some unnecessary pages with repetitive content.. !<br>
-now i just have my main project featured, all of my other works can be found here at the blog and the portfolio.<br>
-i feel like everything is way better now <img src="https://i.imgur.com/2qFl7Lb.gif"/><br>
-<br>
-so.. about my new social media i was starting to get.. well, too into it.<br>
-but i know that social media are bad, it was making me feel really stressed already ; ;<br>
-so i made a promise to myself : i will just open my apps once a day. i still want to keep my "5 hours of internet per week" but it obviously gets harder if i keep my apps open and distracting me !!<br>
-this is what i'm doing now :<br>
-after waking up i open the apps, i check and respond my friends, i post ( if i have something to post ), then i close the apps.<br>
-sometimes i don't respond messages, if i'm tired.. and i try to plan my posts once a week, not every day ( but sometimes i'm just full of ideas )<br>
-.. before sleep i like to respond the messages i haven't before, but that's about it !<br>
-i'm doing it for some days now and i'm already feeling better <img src="https://i.imgur.com/NcqSAci.gif"/><br>
-please be careful about social media ! it is good for making friends and reaching people with your work, but in balance. posting personal things and opening all your apps multiple times a day will only keep you increasingly far from individuality !!!<br>
-you must have realized that you start thinking bad things that you would not normally think and feeling "out of place" ; it's because you're being influenced by excessive information.. !<br>
-really dangerous ...<br>
-<br>
-talking about social media, last month i made a "mood calendar" for instagram, but this month i wasn't feeling motivated for that ..<br>
-i see many similar calendars everywhere and i didn't see a reason in doing something repetitive like that, but i wanted to continue with that idea, improving it somehow.. !<br>
-so i had the idea to do a "self care calendar", much more complete and useful ♡ !!<br>
-i'm very proud of it and i hope to have more ideas in the future to continue helping others on a daily basis.<br>
-helping people is something i love, because it not just fills my heart with joy but also makes me emotionally stronger !<br>
-i feel that i can help myself and people i love better if i've practice beforehand. my own advices and texts help me a lot, and i'm really glad to be able to share it with others and help in any way ♡<br>
-<br>
-i have been trying to fight against insecurity for the longest time.. just like everyone else.<br>
-i think that discovering your individuality is the best way for understanding who you are, what are your flatters and what you can actually improve !<br>
-accepting compliments with your heart is very hard, since you don't actually believe these. it doesn't mean they're wrong.<br>
-lately i've been feeling particularly insecure about myself because sometime it seems that my personality is just the way it is because of the people i've met, which would mean that i also can change others .. isn't it impure ? wrong ?<br>
-actually, i think that it's a natural process of maturing. since we really are shaped with time, it doesn't mean all of it is impurity.. !<br>
-i'll write more about it on the q&a today.<br>
-<br>
-now, the first thing i have to post here is the backup of my last html pages i made !!<br>
-it's just a simple scenary collage with all of my favorite sprites of ragnarok online <img src="https://i.imgur.com/d3P2KyD.gif"/><br>
-aaand, of course, cute domain : <a id="linkbjinho" href="https://kafra.ro.lt" target="_blank">kafra.ro.lt</a><br>
-( i've always admired the kafras, they are inspiration to me /// )<br>
-i made sprites of myself in all themes.. this is my fav one :<br>
-<br><br>
-
-<center><img src="https://i.imgur.com/NuIecGD.png"/></center>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/NmtLB9T.gif"/></sub></sub>　<a href="https://files.catbox.moe/dmveii.rar" target="_blank"><font color="#d3a5a5" style="border-bottom:1px dashed #d3c1b1; padding-bottom: 2px; font-size:10px;">ragnarok .rar</font></a>　</center>
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-( i'm wearing an apron ♡ )<br>
-<br>
-i have also been making lots of things lately !!<br>
-i decorated my little "sewing workspace", since now i have a new and super cute sewing machine ♡<br>
-i'm a little tired now.. and i wanted to make more items for the shy bunny store ; ;<br>
-but well, it's important to rest ! i'll make many cute stuff when i feel motivated again !!!<br>
-from the latest things i made, this needle felted bear is my favorite :<br>
-<br><br>
-
-<center><img width="300px" height="auto" src="https://i.imgur.com/mEbGYvS.png"/></center>
-
-</font></font></font>
-<br>
-
-<font size = 1><font color="#B1A69E">
-<br><br>
-she's soft.. so cute.. i love her a lot ♡♡<br>
-<br>
-mm i have some important things for the q&a today, about ego and age differences !<br>
-<br><br>
-<center><sub><sub><img src="https://i.imgur.com/d81T42M.gif"/></sub></sub>　<b>q & a</b>　<sub><sub><img src="https://i.imgur.com/gCof63R.gif"/></sub></sub></center>
-<br><br>
-　✁ ⅰ<br>
-the ego is all that you were not naturally, all that you have consumed and learned from life experiences. the ego is not necessarily bad, but it is definitely dangerous..<br>
-your ego is the cause of all your insecurities and social problems ; every time you feel dissociated or afraid of other people's opinion about you is because you're trying to make your ego stronger and protect it. the thing is .. you have nothing to be afraid of !<br>
-no one can actually stole who you are, even if you feel like you're similar to others in some way of trying to replicate others to become better, it's just your way of learning. it may be not the best way of improving, but it's what you have now, so it's important being patient with yourself !!<br>
-everything i've learned and got inspired by others is just what made me improve and mature, it's not a bad thing. i also believe that if i am inspiring others in a good way, it's a good thing !!<br>
-it would be impure if i was changing who i am, but i am in fact just polishing myself. i can feel what is artificial and what is not ; so i trust myself to get inspiration and improve with time and experiences.<br>
-i realize that overcoming this fear is really important, since it's really hurtful and hard to improve if i keep feeling afraid of trying new things, changing and not being approved by others.. !<br>
-i can clearly see when people are truly giving me useful and important criticism, and when they're just trying to make me sad because they're frustrated with themselves. i still feel afraid of making people feel frustrated, but it's inevitable. bad feelings are also part of life, and i feel blessed for being able to feel these things and keep learning from it !!<br>
-the ego keeps making me think that i should protect my individuality and my beliefs, that if someone dislike me it's because i'm making something wrong, they're trying to make me unmotivated.. and they're getting it .<br>
-this is really bad, i now can see that it's natural if i make mistakes, even if i'm not making mistakes someone will not agree with me, everyone interpret things differently. i just hope people keep growing up and learning.. and they are !<br>
-individuality is not something that can be stolen, your ego may seem artificial sometimes but if you keep your purity and just do things that you want from heart, everything is okay ♡<br>
-who you are is not just visuals, musical tastes, mannerisms .. you're actually really unique, since ever. no one is truly similar to you, at all ! maybe similar to your ego, but it keeps evolving anyways. it is important to be able to representate your personality through your ego, you can help others to understand themselves and feel really comfortable in your body if you learn to look and act how you think it's the best version of you. if you're not making up your ego for others but using it as a way of expressing yourself, it's healthy and valid !!<br>
-embrace your actual perfection, within your abilities and reality ♡♡<br>
-everyone is trying, and sometimes there will be mean people out there. you're strong enough for understanding they're just sad and immature, they don't actually care about you personally, if you did nothing wrong. your ego makes you fragile and easily offended, but you have nothing to be afraid of !<br>
-these are some important reminders for you and i...<br>
-everyone learns to keep their purity in different paces, so if someone can feel suddenly confused and unsatisfied with themselves by trying to copy who i am, it's not my fault .. i always try to make it clear that purity is important..<br>
-i just want to be happy, and i want others to be happy too. i know that i must accept who i am and love myself to achieve happiness !<br>
-<br>
-<br>
-<br>
-　✃ ⅱ<br>
-i will leave here a brief opinion about age differences in relationships, in general.. !<br>
-i never really cared about interacting or even being friends with people older or younger than me. i believe that age is not a factor that defines whether or not a person is nice to have around ; but if the age difference is too big ( more than 5 years ) being too close becomes a problem as there are some limits and certain topics that are not appropriate to talk with people who are living a so different phase from you. if you are a relative, you have a greater freedom to talk and be an influence to that person ( or be influenced ), but when it comes to relationships i think big age differences are not very healthy normally .. it is uncomfortable when someone's is too young or too old to even understand what you're going through right now, and some people can be really toxic : bad advices, unmotivational comments, generalizations...<br>
-i've always been and i will always be open to being friendly and being there for all the lovely people who come into my life, regardless of anything, but i find it important to understand my position when i'm interacting with a person of a very different age. i avoid being too close to avoid any uncomfortable situation, since what i seek is just solace for me and for everyone !<br>
-if you're too younger or older than me, please don't feel bad ; i still am glad to have you here and i wouldn't reject your interactions. i love making friends and i love having my heart connected with different people from all over the world ♡ !!<br>
-i believe that if i keep cautious about what kind of relationship it's healthy to have with people, everything can turn out okay.. !<br>
-<br>
-<br>
-please don't forget to give me feedback, suggestions and questions for future content ♡ !<br>
-<br>
-<br>
-xoxo <img src="https://i.imgur.com/Oz2Jplk.gif"/><br>
-<br><br>
-</font></font></font>
-
-<br>
-
-<center><img src="https://i.imgur.com/svKT8no.png"/></center>
-
-<br><br><br>
 
 
 <br>
