--- a/portfolio.html
+++ b/portfolio.html
@@ -346,13 +346,13 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/4mpPzWm.jpg"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/q4TUzAP.jpg"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/TPM8Sq1.jpg"><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/N6W0DT9.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> blog and website utilities<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> blog and website materials<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img src="https://i.imgur.com/KH3Qcj9.gif"> <img src="https://i.imgur.com/BafUAvl.gif"><br><br><img src="https://i.imgur.com/r6PF4ve.gif"><br><br><img src="https://i.imgur.com/kjJ7zti.gif"> <img src="https://i.imgur.com/hxS2jLj.gif"><br><br>
 <img src="https://i.imgur.com/bvAiMrD.gif"> <img src="https://i.imgur.com/7mKu6kW.png">
@@ -381,10 +381,11 @@ z-index: 3;
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> handmade accessories<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/AUXDRXU.jpg"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/L6mt2lf.jpg"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/FRmTcJh.jpg">
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> sewing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/uaqaR6k.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/x6fx8wy.jpg"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/1INK0sD.jpg"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/tZ94XKz.jpg">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -392,7 +393,7 @@ z-index: 3;
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital drawing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
 <img width="180px" height="auto" src="https://i.imgur.com/cfEO9ex.png"><br><br>
-<img width="150px" height="auto" src="https://i.imgur.com/79yXxW9.png"><br><br>
+<img width="150px" height="auto" src="https://i.imgur.com/Ad9kbod.png"><br><br>
 <img width="180px" height="auto" src="https://i.imgur.com/rfuPtQy.png"><br><br>
 <img width="170px" height="auto" src="https://i.imgur.com/lGwSuIP.png">
 <br><br><br><br>
@@ -425,7 +426,7 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/QWm8Eg7.gif"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/wZeIURm.png">
+<img width="200px" height="auto" src="https://i.imgur.com/vVwho2a.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
