--- a/recommended.html
+++ b/recommended.html
@@ -309,7 +309,7 @@ z-index: 3;
 
 <center>
 
-<a href="http://www.emirin.com/" target="_blank"><img src="https://i.imgur.com/9jcAUVv.gif"></a>
+<a href="https://bunnymilku.blogspot.com" target="_blank"><img src="https://i.imgur.com/ytdhHO6.gif"></a>
 　<a href="http://whimsical.heartette.net/" target="_blank"><img src="https://i.imgur.com/Szmjm6A.gif"></a>
 　<a href="http://www.lovecandied.com/" target="_blank"><img src="https://i.imgur.com/hUQytvV.gif"></a>
 
@@ -331,7 +331,7 @@ z-index: 3;
 
 　<br><br><a href="https://web.archive.org/web/20111101151554/http://www.mirukuma.com/" target="_blank"><img src="https://i.imgur.com/8jgus9J.gif"></a>
 　　<a href="http://engrampixel.co.vu/" target="_blank"><img src="https://i.imgur.com/eMOOTfI.gif"></a>
-　　<a href="https://web.archive.org/web/20110820151708/http://casinhadasgifs.zip.net/" target="_blank"><img src="https://i.imgur.com/nfmJCMB.gif"></a>
+　　<a href="http://www.emirin.com/" target="_blank"><img src="https://i.imgur.com/9jcAUVv.gif"></a>
 
 　<br><br><a href="https://web.archive.org/web/20110728061529/http://susuda.skr.jp/" target="_blank"><img src="https://i.imgur.com/9EvtDb7.gif"></a>
 　<a href="http://nyokiope.com/" target="_blank"><img src="https://i.imgur.com/CJHMori.gif"></a>
