--- a/faq.html
+++ b/faq.html
@@ -726,7 +726,7 @@ and i probably will not stop posting some pics anonymously out there.. i'm very 
 
 <a name="cc" id="cc"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　do i have ids ?</font><br><br><br>
-<font color="#d8b9af">　( november . 23 . 2017 + february . 15 . 2018 + july . 27 . 2018 )</font>
+<font color="#d8b9af">　( november . 23 . 2017 + july . 27 . 2018 + july . 11 . 2019 )</font>
 <br><br>
 <font color="#B1A69E">
 although i quite like kins and ids, i am sincerely afraid to get involved in dramas since the community is often toxic, so i don't usually expose this kind of thing. but since you were interested to know, i'll show you some of my lovely comfort characters !<br>
@@ -765,6 +765,48 @@ p { margin: 0; }
             } else {
                 this.innerHTML = "ruby";
                 $spoiler.classList.add("is-closed01c");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+　　　　　　　　♡ <a id="linkbjinho" data-target="spoiler0c" class="btn-spoiler0c">fraise</a><br>
+
+<div id="spoiler0c" class="spoiler-area0c is-closed0c">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<center><img width="250" height="auto" src="https://i.imgur.com/aLgEfV1.jpg"/></center>
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area0c {
+
+}
+.spoiler-area0c.is-closed0c { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler0c');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "fraise" ){
+                this.innerHTML = "fraise ˣ";
+                $spoiler.classList.remove("is-closed0c");
+            } else {
+                this.innerHTML = "fraise";
+                $spoiler.classList.add("is-closed0c");
             }
         });
 
@@ -1030,7 +1072,7 @@ p { margin: 0; }
 <div id="spoiler03c" class="spoiler-area03c is-closed03c">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<center><img width="350px" height="auto" src="https://i.imgur.com/i9bTaE2.png"/></center>
+<center><img src="https://i.imgur.com/P0ZAGu9.png"/></center>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -1114,7 +1156,7 @@ p { margin: 0; }
 <div id="spoiler7c" class="spoiler-area7c is-closed7c">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<center><img width="250" height="auto" src="https://i.imgur.com/e4KFcdi.png"/></center>
+<center><img width="200" height="auto" src="https://i.imgur.com/e4KFcdi.png"/></center>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -1208,9 +1250,9 @@ actually, i don't feel that doubles ever make people invalid, but i think it's a
 <div id="spoiler1id" class="spoiler-area1id is-closed1id">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<center><img src="https://i.imgur.com/CyG4AeH.png"/></center><br><br>
-<center><img src="https://i.imgur.com/6JcKimH.png"/></center><br><br>
-<center><img src="https://i.imgur.com/9CeVRTC.png"/></center>
+<center><img width="200" height="auto" src="https://i.imgur.com/CyG4AeH.png"/></center><br><br>
+<center><img width="200" height="auto" src="https://i.imgur.com/6JcKimH.png"/></center><br><br>
+<center><img width="200" height="auto" src="https://i.imgur.com/9CeVRTC.png"/></center>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
@@ -1296,9 +1338,9 @@ p { margin: 0; }
 <div id="spoiler5id" class="spoiler-area5id is-closed5id">
 <!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <br>
-<center><img width="250" height="auto" src="https://i.imgur.com/zaOf0aP.png"/></center><br><br>
-<center><img width="250" height="auto" src="https://i.imgur.com/jOT7gxO.png"/></center><br><br>
-<center><img width="250" height="auto" src="https://i.imgur.com/KBA6iGp.png"/></center>
+<center><img width="200" height="auto" src="https://i.imgur.com/zaOf0aP.png"/></center><br><br>
+<center><img width="200" height="auto" src="https://i.imgur.com/jOT7gxO.png"/></center><br><br>
+<center><img width="200" height="auto" src="https://i.imgur.com/KBA6iGp.png"/></center>
 <br><br>
 </div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
 <style>
