--- a/portfolio.html
+++ b/portfolio.html
@@ -324,7 +324,10 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital painting<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="200px" height="auto" src="https://i.imgur.com/w5BQZ4h.png"><br><br><img width="200px" height="auto" src="https://i.imgur.com/n9s1YN3.png"><br><br><img width="200px" height="auto" src="https://i.imgur.com/Err7MnS.png"><br><br><img width="200px" height="auto" src="https://i.imgur.com/zqHB2w1.png">
+<img width="300px" height="auto" src="https://i.imgur.com/w5BQZ4h.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/zqHB2w1.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/euoPTCp.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/n9s1YN3.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -337,17 +340,18 @@ z-index: 3;
 <center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/jfEMOrb.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/rwF28fo.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/Jr4ECMI.png">
+<img width="300px" height="auto" src="https://i.imgur.com/jfEMOrb.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/dQayP38.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/GJqX3Fp.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/rwF28fo.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/4mpPzWm.jpg"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/TPM8Sq1.jpg"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/N6W0DT9.png">
+<img width="300px" height="auto" src="https://i.imgur.com/4mpPzWm.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/TPM8Sq1.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/N6W0DT9.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -362,8 +366,8 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="250px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
-<img width="250px" height="auto" src="https://i.imgur.com/Wtz6hr6.png">
+<img width="300px" height="auto" src="https://i.imgur.com/VZmuGK3.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/tBuoQYd.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -382,20 +386,21 @@ z-index: 3;
 <center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> sewing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/uaqaR6k.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/x6fx8wy.jpg"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/1INK0sD.jpg"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/tZ94XKz.jpg">
+<img width="300px" height="auto" src="https://i.imgur.com/uaqaR6k.png"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/x6fx8wy.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/1INK0sD.jpg"><br><br>
+<img width="300px" height="auto" src="https://i.imgur.com/tZ94XKz.jpg">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> digital drawing<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="180px" height="auto" src="https://i.imgur.com/cfEO9ex.png"><br><br>
-<img width="150px" height="auto" src="https://i.imgur.com/Ad9kbod.png"><br><br>
-<img width="180px" height="auto" src="https://i.imgur.com/rfuPtQy.png"><br><br>
-<img width="170px" height="auto" src="https://i.imgur.com/lGwSuIP.png">
+<img width="210px" height="auto" src="https://i.imgur.com/GO3s3jt.jpg"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/3DYwstF.png"><br><br>
+<img width="190px" height="auto" src="https://i.imgur.com/RLaGdnI.png"><br><br>
+<img width="210px" height="auto" src="https://i.imgur.com/rfuPtQy.png"><br><br>
+<img width="190px" height="auto" src="https://i.imgur.com/oG4tngO.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -403,8 +408,11 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> outfit ideas<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="170px" height="auto" src="https://i.imgur.com/ZnFkF3q.png"><br><br><img width="170px" height="auto" src="https://i.imgur.com/AOFhc1d.png"><br><br><img width="170px" height="auto" src="https://i.imgur.com/kSge0vK.png">
-<br><br><img width="170px" height="auto" src="https://i.imgur.com/gV1kkrp.png"><br><br><img width="170px" height="auto" src="https://i.imgur.com/o8JOLOa.png">
+<img width="200px" height="auto" src="https://i.imgur.com/ZnFkF3q.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/AOFhc1d.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/kSge0vK.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/gV1kkrp.png"><br><br>
+<img width="200px" height="auto" src="https://i.imgur.com/o8JOLOa.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -417,16 +425,15 @@ z-index: 3;
 <center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> phone customization<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/6QZX0tS.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/S1Y4GqA.gif"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/L172YvL.png">
+<img width="220px" height="auto" src="https://i.imgur.com/6QZX0tS.png"><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/S1Y4GqA.gif">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> story games<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/QWm8Eg7.gif"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/vVwho2a.png">
+<img width="220px" height="auto" src="https://i.imgur.com/QWm8Eg7.gif"><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/vVwho2a.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -442,17 +449,17 @@ z-index: 3;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> embroidery<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="200px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
+<img width="250px" height="auto" src="https://i.imgur.com/vCQFGy0.png">
 <br><br>
-　　<img width="170px" height="auto" src="https://i.imgur.com/DuXGkuR.png">
+　　<img width="220px" height="auto" src="https://i.imgur.com/DuXGkuR.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> photography<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="98px" height="98px" src="https://i.imgur.com/wH6uA8n.jpg">　<img width="98px" height="98px" src="https://i.imgur.com/FfbpbN1.png">
-<br><br><img width="98px" height="98px" src="https://i.imgur.com/lVueesw.jpg">　<img width="98px" height="98px" src="https://i.imgur.com/CpIBdRW.jpg">
+<img width="140px" height="140px" src="https://i.imgur.com/wH6uA8n.jpg">　<img width="140px" height="140px" src="https://i.imgur.com/FfbpbN1.png">
+<br><br><img width="140px" height="140px" src="https://i.imgur.com/lVueesw.jpg">　<img width="140px" height="140px" src="https://i.imgur.com/CpIBdRW.jpg">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -466,8 +473,7 @@ z-index: 3;
 
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> phone case decor<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/2BIzI62.png"><br><br>
-<img width="200px" height="auto" src="https://i.imgur.com/QhPOCLp.png">
+<img width="250px" height="auto" src="https://i.imgur.com/2BIzI62.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 
