--- a/links.html
+++ b/links.html
@@ -335,8 +335,8 @@ z-index: 3;
 <font color="#dbafaf">
 <sub><sub><img src="https://i.imgur.com/VMNuA8L.png"></sub></sub> active accs :<br></font>
 <br>
-　<font color="#7a6b6b">tmblr </font><a id="actv" title="main blog" href="https://pufti.my.to" target="_blank" >♡</a> <a id="actv" title="pixel blog" href="https://pofti.my.to" target="_blank" >♡</a><br>
-　<font color="#7a6b6b">yt </font><a id="actv" title="main ch" href="https://www.youtube.com/soffft" target="_blank" >♡</a>　<font color="#7a6b6b">tt </font><a id="actv" title="comfy acc" href="https://twitter.com/sofffti" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/soffftie" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">tmblr </font><a id="actv" title="aesthetic blog" href="https://pufti.my.to" target="_blank" >♡</a> <a id="actv" title="graphics blog" href="https://pofti.my.to" target="_blank" >♡</a><br>
+　<font color="#7a6b6b">yt </font><a id="actv" title="playlist ch" href="https://www.youtube.com/soffft" target="_blank" >♡</a>　<font color="#7a6b6b">tt </font><a id="actv" title="comfy acc" href="https://twitter.com/sofffti" target="_blank" >♡</a>　<font color="#7a6b6b">ig </font><a id="actv" title="self care acc" href="https://www.instagram.com/soffftie" target="_blank" >♡</a><br>
 <br>
 </div>
 <br><br><br><br><br><br><br><br>
